Added new Files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".login" />
-        <activity android:name=".profile"></activity>
+        <activity android:name=".profile" />
+        <activity android:name=".CreateProfile" />
+        <activity android:name=".AddEntry" />
+        <activity android:name=".Entries" />
+        <activity android:name=".Settings"></activity>
     </application>
 
 </manifest>
