Edit activty layout & database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".login" />
-        <activity android:name=".profile" />
+        <activity android:name=".Login" />
+        <activity android:name=".Profile" />
         <activity android:name=".CreateProfile" />
         <activity android:name=".AddEntry" />
         <activity android:name=".Entries" />
